Code has been changed to allow submit to the NeetCode website.